--- a/index.css
+++ b/index.css
@@ -6,20 +6,29 @@
 .pokeCard {
     width: 8em;
     height: 8em;
-    position: relative
+    position: relative;
+    transform-style: preserve-3d;
+    transition: transform 1s;
+    perspective: 1000px
+}
+
+.pokeCard:hover {
+    transform: rotateY(180deg)
 }
 
 .pokeImg,
 .pokeBack {
     width: 100%;
     height: 100%;
-    position: absolute
+    position: absolute;
+    backface-visibility: hidden;
 }
 
 .pokeBack {
-    z-index: 1
+    z-index: 1;
 }
 
 .pokeImg {
-    z-index: 0
+    z-index: 0;
+    transform: rotateY(180deg);
 }
